Change: replace perl with cmake to generate ttdpal.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,15 @@ set(PALETTE_SOURCE_FILES
 )
 
 add_custom_command(OUTPUT ${GENERATED_BINARY_DIR}/ttdpal.h
-	COMMAND ${CMAKE_COMMAND} -E make_directory ${GENERATED_BINARY_DIR}
-	COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/src/pal2c.pl ${PALETTE_SOURCE_FILES} > ${GENERATED_BINARY_DIR}/ttdpal.h
+	COMMAND ${CMAKE_COMMAND}
+		-D INPUT_FILE=${CMAKE_CURRENT_SOURCE_DIR}/src/ttdpal.h.in
+		-D OUTPUT_FILE=${GENERATED_BINARY_DIR}/ttdpal.h
+		-P ${CMAKE_CURRENT_SOURCE_DIR}/src/pal2c.cmake
+		--
+		${PALETTE_SOURCE_FILES}
 	DEPENDS ${PALETTE_SOURCE_FILES}
+	DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/ttdpal.h.in"
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/pal2c.cmake
 )
 add_custom_target(palettes_header DEPENDS ${GENERATED_BINARY_DIR}/ttdpal.h)
 
